--- a/src/component/style1.css
+++ b/src/component/style1.css
@@ -13,7 +13,11 @@
 {
     width: 200px;
     height: 50px;
+    color: white;
+    border-color: #00579c;
+    border-radius: 6px;
     background-color: #00579c;
+
 }
 
 .BtnSize:hover
@@ -27,7 +31,7 @@
     background-color: #00579c;
 }
 
-.BtnLogin:hover
+.BtnSize:hover
 {
     color: #00579c;
     background-color: white;
